# Delegates

./: .gitignore  LICENSE  Platform.Delegates.sln  README.md
.\packages/Platform.Delegates.TemplateLibrary.0.0.12/: .signature.p7s
.\packages/Platform.Delegates.TemplateLibrary.0.0.12/lib/native/include/: Platform.Delegates.Delegate.h  Platform.Delegates.MulticastDelegate.h  Platform.Delegates.h
.github/workflows/: CD.yml  cpp.yml
cpp/: CMakeLists.txt
cpp/Platform.Delegates/: Delegate.h  Delegates.h  MulticastDelegate.h  Platform.Delegates.CreateDelegate.h  Platform.Delegates.Delegate.h  Platform.Delegates.MulticastDelegate.h  Platform.Delegates.TemplateLibrary.nuspec  Platform.Delegates.TemplateLibrary.vcxproj  Platform.Delegates.TemplateLibrary.vcxproj.filters  Platform.Delegates.h  Platform.Delegates.vcxitems
cpp/Platform.Delegates.Tests/: AllTests.cpp  DelegatesTest.cpp  MulticastDelegatesTest.cpp
cpp/Platform.Delegates.Tests.Console/: Console.cpp  Platform.Delegates.Tests.Console.vcxproj  Platform.Delegates.Tests.Console.vcxproj.filters  build-and-run.sh
cpp/Platform.Delegates.Tests.NuGet.Console/: Platform.Delegates.Tests.NuGet.Console.vcxproj  Platform.Delegates.Tests.NuGet.Console.vcxproj.filters  packages.config
cpp/Platform.Delegates/NuGetPackageSource/: Platform.Delegates.TemplateLibrary.0.0.1.nuspec  Platform.Delegates.TemplateLibrary.0.0.2.nuspec
csharp/: Platform.Delegates.sln
csharp/Platform.Delegates/: Platform.Delegates.csproj  ReadHandler.cs  WriteHandler.cs
